--- a/Baza danych rehabilitacji/Baza danych rehabilitacji/App.xaml
+++ b/Baza danych rehabilitacji/Baza danych rehabilitacji/App.xaml
@@ -2,8 +2,11 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Baza_danych_rehabilitacji"
+             xmlns:models="clr-namespace:Baza_danych_rehabilitacji.Models"
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
-         
+        <models:PatientList x:Key="patientList"></models:PatientList>
+        <models:Patient x:Key="patient"></models:Patient>
+        <models:Address x:Key="address"></models:Address>
     </Application.Resources>
 </Application>
